Bug 1105209 - Add media resource request API. r=kentuckyfriedtakahe