dom/media/fmp4/gonk/GonkMediaDataDecoder.cpp
@@ -165,6 +165,12 @@ GonkMediaDataDecoder::IsDormantNeeded() {
 }
 
 void
+GonkMediaDataDecoder::AllocateMediaResources()
+{
+  mManager->AllocateMediaResources();
+}
+
+void
 GonkMediaDataDecoder::ReleaseMediaResources() {
   mManager->ReleaseMediaResources();
 }
