dom/media/fmp4/gonk/GonkVideoDecoderManager.cpp
@@ -475,6 +475,12 @@ GonkVideoDecoderManager::Flush()
 }
 
 void
+GonkVideoDecoderManager::AllocateMediaResources()
+{
+  mDecoder->RequestMediaResources();
+}
+
+void
 GonkVideoDecoderManager::codecReserved()
 {
   sp<AMessage> format = new AMessage;
