dom/media/omx/mediaresourcemanager/MediaResourceHandler.h
@@ -42,6 +42,8 @@ public:
   // Cancel Resource
   void cancelResource();
 
+  bool IsWaitingResource();
+
 protected:
   // MediaResourceManagerClient::EventListener::statusChanged()
   virtual void statusChanged(int event);
@@ -57,10 +59,11 @@ private:
 
   // Resource Management
   Mutex mLock;
-  MediaResourceManagerClient::State mState;
   sp<IMediaResourceManagerClient> mClient;
   sp<IMediaResourceManagerService> mService;
   IMediaResourceManagerService::ResourceType mType;
+
+  bool mWaitingResource;
 };
 
 } // namespace android
